# Alyka_agentic_api

./: .dockerignore  .env.example  .gitignore  COGNITO_SETUP.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-run.sh  docker-stop.sh  pyproject.toml  requirements.txt  server.py  simple_test.py  simplified_social_media.py  test_api_keys.py
src/agentic_api/: __init__.py  api.py  auth.py  crew.py  main.py  middleware.py  social_media_crew.py  social_media_main.py
src/agentic_api/config/: agents.yaml  social_media_agents.yaml  social_media_tasks.yaml  tasks.yaml
src/agentic_api/static/: login.html
src/agentic_api/tools/: __init__.py  custom_tool.py  social_media_tools.py
